--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
                     <a href="https://www.instagram.com/upctabasco/" class="social-link instagram">
                         <img src="assets/icons/instagram.svg" alt="Instagram" class="social-icon">
                     </a>
+                    <a href="https://www.tiktok.com/@upctabasco" class="social-link tiktok">
+                        <img src="assets/icons/tiktok.svg" alt="Tiktok" class="social-icon">
+                    </a>
                 </div>
             </div>
             <ul class="nav-links">
